k8s/apps/multimedia/seerr/deployment.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seerr
  namespace: seerr
  labels:
    app.kubernetes.io/name: seerr
    app.kubernetes.io/instance: seerr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: seerr
      app.kubernetes.io/instance: seerr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: seerr
        app.kubernetes.io/instance: seerr
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: seerr
          image: ghcr.io/seerr-team/seerr:preview-new-oidc
          imagePullPolicy: Always # While it's in preview-new-oidc
          resources:
            requests:
              cpu: 10m
              memory: 128Mi
            limits:
              memory: 512Mi
          startupProbe:
            httpGet:
              path: /api/v1/settings/public
              port: http
          livenessProbe:
            httpGet:
              path: /api/v1/settings/public
              port: http
          readinessProbe:
            httpGet:
              path: /api/v1/settings/public
              port: http
          securityContext:
            readOnlyRootFilesystem: false # FIXME: Yarn wants a bunch of writable dirs
          ports:
            - name: http
              containerPort: 5055
          volumeMounts:
            - name: config
              mountPath: /app/config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: config-seerr
