k8s/apps/multimedia/seerr/service.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: seerr
  namespace: seerr
  labels:
    app.kubernetes.io/name: seerr
    app.kubernetes.io/instance: seerr
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: seerr
    app.kubernetes.io/instance: seerr
  ports:
    - name: http
      port: 5055
      targetPort: 5055
      protocol: TCP
