k8s/apps/multimedia/seerr/ingress.k8s.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seerr
  namespace: seerr
  labels:
    app.kubernetes.io/name: seerr
    app.kubernetes.io/instance: seerr
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: ingress-external-traefik
  rules:
    - host: seerr.${CLUSTER_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seerr
                port:
                  name: http
